# RV32I-Assembler-Emulator

./: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  README.md  definitions.h  main.cpp
FileRef/: test0_ref.txt
FileTests/: rv32i.rasm  square  square.rasm  test0.rasm  test0.txt  test1.rasm  test1.txt  test2.rasm  test2.txt
include/: Assembler.h  CPU.h  Emulator.h  Interpreter.h  Parser.h  TestSystem.h  definitions.h
scripts/: main.py  rv32gc.txt
src/: Assembler.cpp  CPU.cpp  Emulator.cpp  Interpreter.cpp  Parser.cpp  TestSystem.cpp  main.cpp
